testdata/baselines/reference/submodule/conformance/awaitUsingDeclarations.16.errors.txt
awaitUsingDeclarations.16.ts(2,5): error TS2852: 'await using' statements are only allowed within async functions and at the top levels of modules.
awaitUsingDeclarations.16.ts(3,5): error TS2852: 'await using' statements are only allowed within async functions and at the top levels of modules.
awaitUsingDeclarations.16.ts(6,5): error TS2852: 'await using' statements are only allowed within async functions and at the top levels of modules.
awaitUsingDeclarations.16.ts(7,5): error TS2852: 'await using' statements are only allowed within async functions and at the top levels of modules.


==== awaitUsingDeclarations.16.ts (4 errors) ====
    declare namespace N {
        await using x: { [Symbol.asyncDispose](): Promise<void> };
        ~~~~~
!!! error TS2852: 'await using' statements are only allowed within async functions and at the top levels of modules.
        await using y: null;
        ~~~~~
!!! error TS2852: 'await using' statements are only allowed within async functions and at the top levels of modules.
    }
    declare module 'M' {
        await using x: { [Symbol.asyncDispose](): Promise<void> };
        ~~~~~
!!! error TS2852: 'await using' statements are only allowed within async functions and at the top levels of modules.
        await using y: null;
        ~~~~~
!!! error TS2852: 'await using' statements are only allowed within async functions and at the top levels of modules.
    }
    